--- a/lab1/TF_Part1_Intro.ipynb
+++ b/lab1/TF_Part1_Intro.ipynb
@@ -58,11 +58,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "LkaimNJfYZ2w"
+        "id": "LkaimNJfYZ2w",
+        "outputId": "3b19ff5f-6077-4362-efde-c6ddb077afc8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[?25l     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/2.1 MB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K     \u001b[91m━━━━━━━━━━━━━\u001b[0m\u001b[90m╺\u001b[0m\u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.7/2.1 MB\u001b[0m \u001b[31m20.9 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K     \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m \u001b[32m2.1/2.1 MB\u001b[0m \u001b[31m33.1 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.1/2.1 MB\u001b[0m \u001b[31m23.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Building wheel for mitdeeplearning (setup.py) ... \u001b[?25l\u001b[?25hdone\n"
+          ]
+        }
+      ],
       "source": [
         "import tensorflow as tf\n",
         "\n",
@@ -91,11 +105,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
-        "id": "tFxztZQInlAB"
+        "id": "tFxztZQInlAB",
+        "outputId": "03160d85-1b83-49b0-f174-bc0e6b9c268e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "`sport` is a 0-d Tensor\n",
+            "`number` is a 0-d Tensor\n"
+          ]
+        }
+      ],
       "source": [
         "sport = tf.constant(\"Tennis\", tf.string)\n",
         "number = tf.constant(1.41421356237, tf.float64)\n",
@@ -115,11 +142,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
-        "id": "oaHXABe8oPcO"
+        "id": "oaHXABe8oPcO",
+        "outputId": "43713562-71ef-4063-df63-5ef4fc4c737e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "`sports` is a 1-d Tensor with shape: [2]\n",
+            "`numbers` is a 1-d Tensor with shape: [3]\n"
+          ]
+        }
+      ],
       "source": [
         "sports = tf.constant([\"Tennis\", \"Basketball\"], tf.string)\n",
         "numbers = tf.constant([3.141592, 1.414213, 2.71821], tf.float64)\n",
@@ -139,7 +179,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "id": "tFeBBe1IouS3"
       },
@@ -148,7 +188,7 @@
         "### Defining higher-order Tensors ###\n",
         "\n",
         "'''TODO: Define a 2-d Tensor'''\n",
-        "matrix = # TODO\n",
+        "matrix = tf.constant([[3.141592, 1.414213, 2.71821],[3.141592, 1.414213, 2.71821]], tf.float64)\n",
         "\n",
         "assert isinstance(matrix, tf.Tensor), \"matrix must be a tf Tensor object\"\n",
         "assert tf.rank(matrix).numpy() == 2"
@@ -156,7 +196,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "### Defining higher-order Tensors ###\n",
+        "\n",
+        "'''TODO: Define a 2-d Tensor'''\n",
+        "matrix = tf.zeros(shape=[3,3])\n",
+        "\n",
+        "assert isinstance(matrix, tf.Tensor), \"matrix must be a tf Tensor object\"\n",
+        "assert tf.rank(matrix).numpy() == 2"
+      ],
+      "metadata": {
+        "id": "zS9cxmUrnK3o"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 5,
       "metadata": {
         "id": "Zv1fTn_Ya_cz"
       },
@@ -165,7 +222,7 @@
         "'''TODO: Define a 4-d Tensor.'''\n",
         "# Use tf.zeros to initialize a 4-d Tensor of zeros with size 10 x 256 x 256 x 3.\n",
         "#   You can think of this as 10 images where each image is RGB 256 x 256.\n",
-        "images = # TODO\n",
+        "images = tf.zeros(shape=[10, 256, 256, 3])\n",
         "\n",
         "assert isinstance(images, tf.Tensor), \"matrix must be a tf Tensor object\"\n",
         "assert tf.rank(images).numpy() == 4, \"matrix must be of rank 4\"\n",
@@ -183,11 +240,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
-        "id": "FhaufyObuLEG"
+        "id": "FhaufyObuLEG",
+        "outputId": "0729021d-476c-4ea4-bcc5-7a0ab8b22a46",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "`row_vector`: [0. 0. 0.]\n",
+            "`column_vector`: [0. 0. 0.]\n",
+            "`scalar`: 0.0\n"
+          ]
+        }
+      ],
       "source": [
         "row_vector = matrix[1]\n",
         "column_vector = matrix[:,1]\n",
@@ -213,11 +284,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
-        "id": "X_YJrZsxYZ2z"
+        "id": "X_YJrZsxYZ2z",
+        "outputId": "e698059c-7dc1-4cd9-a38d-890380640fd1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tf.Tensor(76, shape=(), dtype=int32)\n",
+            "tf.Tensor(76, shape=(), dtype=int32)\n"
+          ]
+        }
+      ],
       "source": [
         "# Create the nodes in the graph, and initialize values\n",
         "a = tf.constant(15)\n",
@@ -249,21 +333,34 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "id": "PJnfzpWyYZ23",
-        "scrolled": true
+        "scrolled": true,
+        "outputId": "9ed3c6dd-a6ce-4883-b7ba-70491b0dcfbd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.10/dist-packages/ipykernel/ipkernel.py:283: DeprecationWarning: `should_run_async` will not call `transform_cell` automatically in the future. Please pass the result to `transformed_cell` argument and any exception that happen during thetransform in `preprocessing_exc_tuple` in IPython 7.17 and above.\n",
+            "  and should_run_async(code)\n"
+          ]
+        }
+      ],
       "source": [
         "### Defining Tensor computations ###\n",
         "\n",
         "# Construct a simple computation function\n",
         "def func(a,b):\n",
         "  '''TODO: Define the operation for c, d, e (use tf.add, tf.subtract, tf.multiply).'''\n",
-        "  c = # TODO\n",
-        "  d = # TODO\n",
-        "  e = # TODO\n",
+        "  c = tf.add(a,b)\n",
+        "  d = tf.subtract(b,1)\n",
+        "  e = tf.multiply(c,d)\n",
         "  return e"
       ]
     },
@@ -278,11 +375,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
-        "id": "pnwsf8w2uF7p"
+        "id": "pnwsf8w2uF7p",
+        "outputId": "15f57278-8fa6-476c-b6d6-67bacf71789a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tf.Tensor(6.0, shape=(), dtype=float32)\n"
+          ]
+        }
+      ],
       "source": [
         "# Consider example values for a,b\n",
         "a, b = 1.5, 2.5\n",
@@ -318,11 +427,34 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
-        "id": "HutbJk-1kHPh"
+        "id": "HutbJk-1kHPh",
+        "outputId": "182f8291-7f1b-4064-96ab-c851dca01cc7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[0.27064407 0.1826951  0.50374055]]\n",
+            "[PASS] test_custom_dense_layer_output\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ],
       "source": [
         "### Defining a network Layer ###\n",
         "\n",
@@ -339,15 +471,15 @@
         "    d = int(input_shape[-1])\n",
         "    # Define and initialize parameters: a weight matrix W and bias b\n",
         "    # Note that parameter initialization is random!\n",
-        "    self.W = self.add_weight(\"weight\", shape=[d, self.n_output_nodes]) # note the dimensionality\n",
-        "    self.b = self.add_weight(\"bias\", shape=[1, self.n_output_nodes]) # note the dimensionality\n",
+        "    self.W = self.add_weight(name=\"weight\", shape=[d, self.n_output_nodes]) # note the dimensionality\n",
+        "    self.b = self.add_weight(name=\"bias\", shape=[1, self.n_output_nodes]) # note the dimensionality\n",
         "\n",
         "  def call(self, x):\n",
         "    '''TODO: define the operation for z (hint: use tf.matmul)'''\n",
-        "    z = # TODO\n",
+        "    z = tf.matmul(x,self.W) + self.b\n",
         "\n",
         "    '''TODO: define the operation for out (hint: use tf.sigmoid)'''\n",
-        "    y = # TODO\n",
+        "    y = tf.sigmoid(z)\n",
         "    return y\n",
         "\n",
         "# Since layer parameters are initialized randomly, we will set a random seed for reproducibility\n",
@@ -373,7 +505,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
         "id": "7WXTpmoL6TDz"
       },
@@ -395,7 +527,7 @@
         "# Remember: dense layers are defined by the parameters W and b!\n",
         "# You can read more about the initialization of W and b in the TF documentation :)\n",
         "# https://www.tensorflow.org/api_docs/python/tf/keras/layers/Dense?version=stable\n",
-        "dense_layer = # TODO\n",
+        "dense_layer = OurDenseLayer(n_output_nodes)\n",
         "\n",
         "# Add the dense layer to the model\n",
         "model.add(dense_layer)\n"
@@ -412,17 +544,37 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
-        "id": "sg23OczByRDb"
+        "id": "sg23OczByRDb",
+        "outputId": "27ddabfb-3bf0-4c67-f564-6f9786dcd23d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tf.Tensor([[0.18262719 0.08587597 0.1927509 ]], shape=(1, 3), dtype=float32)\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.10/dist-packages/ipykernel/ipkernel.py:283: DeprecationWarning: `should_run_async` will not call `transform_cell` automatically in the future. Please pass the result to `transformed_cell` argument and any exception that happen during thetransform in `preprocessing_exc_tuple` in IPython 7.17 and above.\n",
+            "  and should_run_async(code)\n"
+          ]
+        }
+      ],
       "source": [
         "# Test model with example input\n",
         "x_input = tf.constant([[1,2.]], shape=(1,2))\n",
         "\n",
         "'''TODO: feed input into the model and predict the output!'''\n",
-        "model_output = # TODO\n",
+        "model_output = model(x_input)\n",
         "print(model_output)"
       ]
     },
@@ -437,7 +589,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
         "id": "K4aCflPVyViD"
       },
@@ -454,7 +606,7 @@
         "  def __init__(self, n_output_nodes):\n",
         "    super(SubclassModel, self).__init__()\n",
         "    '''TODO: Our model consists of a single Dense layer. Define this layer.'''\n",
-        "    self.dense_layer = '''TODO: Dense Layer'''\n",
+        "    self.dense_layer = OurDenseLayer(n_output_nodes)\n",
         "\n",
         "  # In the call function, we define the Model's forward pass.\n",
         "  def call(self, inputs):\n",
@@ -473,11 +625,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {
-        "id": "LhB34RA-4gXb"
+        "id": "LhB34RA-4gXb",
+        "outputId": "55156dc5-5135-444d-e8d8-05e52b6c2497",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tf.Tensor([[0.63766265 0.837621   0.9612346 ]], shape=(1, 3), dtype=float32)\n"
+          ]
+        }
+      ],
       "source": [
         "n_output_nodes = 3\n",
         "model = SubclassModel(n_output_nodes)\n",
@@ -498,11 +662,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {
-        "id": "P7jzGX5D1xT5"
+        "id": "P7jzGX5D1xT5",
+        "outputId": "ea18a916-15b4-4441-dbe7-bbf01a4d16b5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.10/dist-packages/ipykernel/ipkernel.py:283: DeprecationWarning: `should_run_async` will not call `transform_cell` automatically in the future. Please pass the result to `transformed_cell` argument and any exception that happen during thetransform in `preprocessing_exc_tuple` in IPython 7.17 and above.\n",
+            "  and should_run_async(code)\n"
+          ]
+        }
+      ],
       "source": [
         "### Defining a model using subclassing and specifying custom behavior ###\n",
         "\n",
@@ -519,7 +696,10 @@
         "\n",
         "  '''TODO: Implement the behavior where the network outputs the input, unchanged, under control of the isidentity argument.'''\n",
         "  def call(self, inputs, isidentity=False):\n",
-        "    ### TODO"
+        "    if isidentity == False:\n",
+        "      return self.dense_layer(inputs)\n",
+        "    else:\n",
+        "      return inputs"
       ]
     },
     {
@@ -533,19 +713,39 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
-        "id": "NzC0mgbk5dp2"
+        "id": "NzC0mgbk5dp2",
+        "outputId": "95b58ad0-a132-4fb6-c09f-70554b935a07",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Network output with activation: [[0.3137059  0.09264624 0.23160185]]; network identity output: [[1. 2.]]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.10/dist-packages/ipykernel/ipkernel.py:283: DeprecationWarning: `should_run_async` will not call `transform_cell` automatically in the future. Please pass the result to `transformed_cell` argument and any exception that happen during thetransform in `preprocessing_exc_tuple` in IPython 7.17 and above.\n",
+            "  and should_run_async(code)\n"
+          ]
+        }
+      ],
       "source": [
         "n_output_nodes = 3\n",
         "model = IdentityModel(n_output_nodes)\n",
         "\n",
         "x_input = tf.constant([[1,2.]], shape=(1,2))\n",
         "'''TODO: pass the input into the model and call with and without the input identity option.'''\n",
-        "out_activate = # TODO\n",
-        "out_identity = # TODO\n",
+        "out_activate = model.call(x_input, False)\n",
+        "out_identity = model.call(x_input, True)\n",
         "\n",
         "print(\"Network output with activation: {}; network identity output: {}\".format(out_activate.numpy(), out_identity.numpy()))"
       ]
